<resources>
    <string name="app_name">Movies Catalog</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sahildsh_gmail_com">sahildsh@gmail.com</string>
    <string name="sahil_doshi">Sahil Doshi</string>
    <string name="lists">Lists</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="upcoming">Upcoming</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginU"><u><b>Login</b></u></string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="registerU"><u><b>Register</b></u></string>
    <string name="register">Register</string>
    <string name="login_with_OTP">OTP</string>
    <string name="_91">+91</string>
    <string name="international_prefix">international prefix</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_catalog">Movie Catalog</string>
    <string name="home">Home</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="popular">Popular</string>
    <string name="overview">Overview</string>
    <string name="average_votes">Average Votes</string>
    <string name="trailer">Trailers</string>
    <string name="genre">Genre</string>
    <string name="search_title">search_title</string>
    <string name="arrow">arrow</string>
    <string name="guest">Guest</string>
    <string name="favourites">Favourites</string>
    <string name="name1">Name: </string>
    <string name="profile_information">Profile Information:-</string>
    <string name="date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="date_of_birth1">Date of Birth: </string>
    <string name="phone_number1">Phone Number:</string>
    <string name="email1">Email:</string>
    <string name="email_main">Email: %1$s</string>
    <string name="name_main">Name: %1$s</string>
    <string name="dob_main">Date of Birth: %1$s</string>
    <string name="set_password">Set Password</string>
    <string name="name">Name</string>
    <string name="email_icon">email icon</string>
    <string name="password_icon">password icon</string>
    <string name="date_of_birth_icon">date of birth icon</string>
    <string name="name_icon">name icon</string>
    <string name="please_wait">Please Wait...</string>
    <string name="save">Save</string>
    <string name="favourite">Favourite</string>

</resources>
