<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/lists">

        <menu>

            <item
                android:id="@+id/nav_latest"
                android:title="@string/latest"/>

            <item
                android:id="@+id/nav_toprated"
                android:title="@string/top_rated"/>

            <item
                android:id="@+id/nav_upcoming"
                android:title="@string/upcoming"/>
            <item
                android:id="@+id/exp"
                android:title="exp"/>

        </menu>

    </item>

    <item android:title="@string/profile">

        <menu>

            <item
                android:id="@+id/nav_signIn"
                android:title="@string/sign_in"/>

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"/>

        </menu>

    </item>

</menu>
