<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhNoLogin"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvPhLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="80sp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPhNoPrefix"
        android:layout_width="97dp"
        android:layout_height="50dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:inputType="textPersonName"
        android:text="@string/_91"
        android:hint="@string/international_prefix"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@color/browser_actions_divider_color"
        android:autofillHints="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhLogin" />

    <EditText
        android:id="@+id/etPhNo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="28sp"
        android:layout_marginEnd="20sp"
        android:autofillHints="phone"
        android:hint="@string/phone_number"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:textColor="@color/black"
        android:background="@color/browser_actions_divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhLogin"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginPhBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:text="@string/login"
        android:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhNoPrefix"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:text="@string/verify_mobile"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPhBtn" />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:ems="10"
        android:inputType="numberPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:background="@color/browser_actions_divider_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVerify"
        android:autofillHints="phone"
        android:hint="@string/otp"/>

    <Button
        android:id="@+id/verifyPhBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:text="@string/verify"
        android:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOTP" />

</androidx.constraintlayout.widget.ConstraintLayout>