<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_black"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo_profile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="148dp"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/phno_profile"
        android:layout_width="42dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_person_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_profile"
        android:contentDescription="@string/name_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@id/phno_profile"
        app:layout_constraintTop_toBottomOf="@id/photo_profile">


        <EditText
            android:id="@+id/et_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:autofillHints="name"/>


    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/dob_profile"
        android:layout_width="42dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_profile_name"
        android:contentDescription="@string/date_of_birth_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_dob"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toEndOf="@id/dob_profile"
        app:layout_constraintTop_toBottomOf="@+id/til_profile_name">


        <EditText
            android:id="@+id/et_profile_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Date"
            android:hint="@string/date_of_birth"
            android:inputType="date" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/save"
        android:textColor="@color/pale_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>