<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150sp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:background="@color/pale_black">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/movie_poster" />

    <TextView
        android:id="@+id/tv_movieTitle"
        android:layout_width="206dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/movie_poster"
        android:text="@string/movie_title"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_movieTitle"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/movie_poster"
        android:text="@string/release_date"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>