<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:id="@+id/drawer_Layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pale_black">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_photo_main"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_info_main"
            android:layout_marginTop="50dp"
            android:src="@drawable/photo"/>

        <TextView
            android:id="@+id/tv_profile_info_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_information"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_name_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name1"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_photo_main"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_phoneNumber_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number1"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_main"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_email_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email1"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phoneNumber_main"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_dob_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth1"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_main"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>